# flowvault

./: .gitignore  README.md  angular.json  package-lock.json  package.json
rust/: Cargo.toml
rust/ocel_core/: Cargo.toml
rust/ocel_core/src/: document.rs  error.rs  lib.rs
rust/ocel_core/src/document/: analysis.rs  api.rs  log.rs  source.rs  state_query.rs  types.rs
rust/ocel_core/src/document/analysis/: 01.rs  03.rs  04.rs  06.rs  08.rs  09.rs  10.rs  13.rs  14.rs  graph_accumulator.rs  graph_routing.rs  lifecycle_kpi_dtos.rs  lifecycle_patterns.rs  som_training.rs
rust/ocel_core/src/document/api/: 01.rs  02.rs  analysis_methods.rs
rust/ocel_core/src/document/log/: 03.rs  04.rs  05.rs  06.rs  07.rs  09.rs  15.rs  16.rs  17.rs  18.rs  19.rs  21.rs  22.rs  23.rs  causal_features.rs  correlations.rs  import.rs  object_lifecycle.rs  state_detection_run.rs  state_detection_views.rs  state_patterns.rs  summary.rs  transition_performance.rs
rust/ocel_core/src/document/source/: 03.rs  04.rs  05.rs  format_parsers.rs  source_models.rs
rust/ocel_core/src/document/state_query/: 01.rs  06.rs  evaluation.rs  parser_expressions.rs  parser_state.rs  tokenizer.rs
rust/ocel_core/src/document/types/: 03.rs  compact_model.rs  request_dtos.rs
rust/ocel_core/tests/: analysis_api.rs  document_api.rs  import_export.rs
rust/ocel_core/tests/common/: mod.rs
rust/ocel_wasm/: Cargo.toml
rust/ocel_wasm/src/: lib.rs
rust/ocel_wasm/src/wasm/: 01.rs  02.rs
src/: index.html  styles.css
src/app/: app-causal-editor.spec.ts  app-causal-llm.spec.ts  (+22 more)
tools/: copy-landing.mjs
(+114 files in other folders)
