[package]
name = "ocel_wasm"
version = "0.1.0"
edition = "2021"
description = "OCEL 2.0 JSON/XML import and export core compiled to WebAssembly."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
roxmltree = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
