[package]
name = "ocel_wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the Flowvault OCEL core."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ocel_core = { path = "../ocel_core" }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
